--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,59 +7,59 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/main_LBL_score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/defaultScore"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/defaultMargin"
-        android:layout_marginEnd="@dimen/defaultMargin"
-        android:textSize="@dimen/ScoreSize"
-        android:textColor="@color/hexColer"
-        android:textStyle="bold|italic"
-        />
-
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="@dimen/defaultMargin"
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/main_IMG_heart1"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/heart" />
-
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/main_IMG_heart2"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/heart" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/main_IMG_heart3"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/heart" />
-
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/background1"
+        >
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/main_LBL_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/defaultScore"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="@dimen/defaultMargin"
+            android:layout_marginEnd="@dimen/defaultMargin"
+            android:textSize="@dimen/ScoreSize"
+            android:textColor="@color/hexColer"
+            android:textStyle="bold|italic"
+            />
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="@dimen/defaultMargin"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/main_IMG_heart1"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/heart" />
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/main_IMG_heart2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/heart" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/main_IMG_heart3"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/heart" />
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
 
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -105,7 +105,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="60dp"
-            android:background="@android:color/darker_gray"
             android:layout_marginBottom="80dp"
             >
 
@@ -120,7 +119,7 @@
                 android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -134,7 +133,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <!-- Top Right -->
             <androidx.appcompat.widget.AppCompatImageView
@@ -147,7 +146,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -159,7 +158,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -171,7 +170,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -183,7 +182,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -195,7 +194,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -207,7 +206,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -219,7 +218,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -231,7 +230,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -243,7 +242,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:visibility="invisible"
@@ -255,7 +254,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cactus" />
+                app:srcCompat="@drawable/cactus2" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -276,7 +275,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/rex"
+                app:srcCompat="@drawable/dinosaur"
                 tools:layout_editor_absoluteX="154dp"
                 tools:layout_editor_absoluteY="546dp"
                 android:layout_weight="1"
@@ -288,7 +287,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/rex"
+                app:srcCompat="@drawable/dinosaur"
                 tools:layout_editor_absoluteX="154dp"
                 tools:layout_editor_absoluteY="546dp"
                 android:layout_weight="1"
@@ -301,7 +300,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/rex"
+                app:srcCompat="@drawable/dinosaur"
                 tools:layout_editor_absoluteX="154dp"
                 tools:layout_editor_absoluteY="546dp"
                 android:layout_weight="1"
